--- a/report.tex
+++ b/report.tex
@@ -9,6 +9,36 @@
 \documentclass[thesis]{mas_report}
 \usepackage{xeCJK}
 \usepackage{float}
+\usepackage{listings}
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\lstset{
+	alsolanguage =  {[ISO]C++},
+	alsolanguage = {[Visual]C++},
+	alsolanguage=[ANSI]C
+}
+\lstset{breaklines}
+\lstset{extendedchars=false}
+\lstset{ %
+	backgroundcolor=\color{white},   % choose the background color
+	basicstyle=\footnotesize\ttfamily,        % size of fonts used for the code
+	columns=fullflexible,
+	breaklines=true,                 % automatic line breaking only at whitespace
+	captionpos=b,                    % sets the caption-position to bottom
+	tabsize=4,
+	commentstyle=\color{dkgreen},    % comment style
+	escapeinside={\%*}{*)},          % if you want to add LaTeX within your code
+	keywordstyle=\color{blue},       % keyword style
+	stringstyle=\color{red}\ttfamily,    % string literal style
+	frame=shadowbox,
+	rulesepcolor=\color{red!20!green!20!blue!20},
+	% identifierstyle=\color{red},
+	numbers=left, 
+	numberstyle=\tiny,
+	% escapeinside=' ',
+	xleftmargin=2em,
+	xrightmargin=2em, 
+	aboveskip=1em
+}
 % \documentclass[rnd]{mas_report}
 
 % ****************************************************
