--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,13 +1,142 @@
-@Article{art1,
-  author =       "Author Name",
-  title =        "Book Title",
-  journal =      "Lecture Notes in Autonomous System",
-  volume =       "1001",
-  publisher =    "UFO",
-  pages =        "900--921",
-  year =         "2003",
-  coden =        "LNCSD9",
-  ISSN =         "0302-2345",
-  bibdate =      "Sat Dec 7 10:05:42 MST 2003",
+
+@misc{softZhihu,
+
+   author = {Zhihu},
+
+   title = {如何开始用C++写一个光栅化渲染器},
+
+   howpublished = {\url{https://www.zhihu.com/question/24786878}}
+
+}
+
+@misc{skywind,
+
+   author = {skywind},
+
+   title = {如何写一个软件渲染器},
+
+   howpublished = {\url{http://www.skywind.me/blog/archives/1498}}
+
+}
+
+@misc{axiyi,
+
+   author = {CSDN},
+
+   title = {如何写一个软件渲染器},
+
+   howpublished = {\url{https://blog.csdn.net/aceyan0718/article/details/51659381}}
+
+}
+
+@misc{1148525,
+
+   author = {腾讯云},
+
+   title = {如何写一个软件渲染器},
+
+   howpublished = {\url{https://cloud.tencent.com/developer/article/1454225}}
+
+}
+
+@misc{12shader,
+
+   author = {腾讯游戏学院},
+
+   title = {学习shader之前必须知道的东西之计算机图形学},
+
+   howpublished = {\url{https://gameinstitute.qq.com/community/detail/108082}}
+
+}
+
+
+@misc{13project,
+
+   author = {博客园},
+
+   title = {透视投影(Perspective Projection)变换推导},
+
+   howpublished = {\url{https://www.cnblogs.com/hisiqi/p/3155813.html}}
+
+}
+
+@misc{14project,
+
+   author = {CSDN},
+
+   title = {OpenGL渲染流水线之世界矩阵，相机变换矩阵，透视投影变换矩阵},
+
+   howpublished = {\url{https://blog.csdn.net/qq_29523119/article/details/78577246}}
+
+}
+
+@misc{15pipline,
+
+   author = {Wahh},
+
+   title = {SoftRender三部曲},
+
+   howpublished = {\url{http://www.yzlcoder.cn/graphics}}
+
+}
+
+@misc{16pipline,
+
+   author = {CSND},
+
+   title = {从迷你光栅化渲染器的实现来看渲染流水线},
+
+   howpublished = {\url{https://blog.csdn.net/puppet_master/article/details/80317178}}
+
+}
+
+@misc{17light,
+
+   author = {CSND},
+
+   title = {实现逐顶点的ambient，diffuse and specular(ADS) shading phong 光照模型},
+
+   howpublished = {\url{https://blog.csdn.net/zhuyingqingfen/article/details/19069501}}
+
+}
+
+@misc{18opengl,
+
+   author = {songho},
+
+   title = {OpenGL Transformation},
+
+   howpublished = {\url{http://www.songho.ca/opengl/gl_transform.html}}
+
+}
+
+@misc{19DirectX,
+
+   author = {博客园},
+
+   title = {DirectX视口变换矩阵详解},
+
+   howpublished = {\url{https://www.cnblogs.com/graphics/archive/2009/10/13/1582773.html}}
+
+}
+
+@misc{20cn,
+
+   author = {opengl},
+
+   title = {LearnOpenGL CN},
+
+   howpublished = {\url{https://learnopengl-cn.github.io/}}
+
+}
+
+@misc{zzzn,
+
+   author = {github},
+
+   title = {A-Renderer},
+
+   howpublished = {\url{https://github.com/GaoChongwen/A-Renderer}}
+
 }
 
