--- a/mas_report.cls
+++ b/mas_report.cls
@@ -106,11 +106,11 @@ not set. Please fix this.}
 
     \begin{minipage}{0.475\textwidth}
         \centering
-	   \includegraphics[height=1.3cm]{images/Logo-HBRS-cyan.png}
+	   \includegraphics[width=0.9\textwidth]{images/logo-left.png}
     \end{minipage}
     \begin{minipage}{0.475\textwidth}
         \centering
-	   \includegraphics[height=1.3cm]{images/b-it.pdf}
+	   \includegraphics[width=0.9\textwidth]{images/logo-right.png}
     \end{minipage}
     \centering
     \vfill
